<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">小白</string>
    <string name="personal_center">个人中心</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="clean_all">一键清理</string>
    <string name="optimize_all">一键优化</string>
    <string name="common_tools">常用工具</string>
    <string name="software_manager">软件管理</string>
    <string name="advance_tools">高级工具</string>
    <string name="setting_center">设置中心</string>
    <string name="telephone_number_location_query">号码归属地查询</string>
    <string name="sms_backup">短信的备份</string>
    <string name="sms_restore">短信还原</string>
    <string name="traffic_rank">流量排行</string>
	<string name="traffic_statistics">流量统计</string>   
    <string name="app_fire_wall">防火墙</string>
    <string name="add_black_number">添加黑名单号码</string>
    <string name="add_black_list">添加黑名单</string>
    <string name="add_white_list">添加白名单</string>
    <string name="add_white_number">添加白名单号码</string>
    <string name="kill_all">一键清理</string>
    <string name="exit_the_application">若要退出请再按一下</string>
    <string name="traffic_consume_today">今日已用：</string>
    <string name="mobile_traffic_count">套餐总共：</string>
    <string name="today">今天</string>
    <string name="traffic_setting">流量套餐设置</string>
    <string name="traffic_correction">校正流量</string>
    <string name="add">添加</string>
    <string name="sure">确定</string>
    <string name="password_error">密码错误</string>
    <string name="unknown">未知</string>
    <string name="task_manager">进程管理</string>
    <string name="QR_code">二维码</string>
    <string name="number_location">归属地</string>
    <string name="not_setting">未设置</string>
    <string name="no_data">暂无数据</string>
    <string name="loading">努力加载中...</string>
    <string name="clean_cache">缓存清理</string>
    <string name="anti_virus">手机杀毒</string>
    <string name="mobile_no_track">归属地查询</string>
    <string name="manual_add">手动添加</string>
    <string name="sms_list">短信列表</string>
    <string name="call_records">通话记录</string>
    <string name="lock_setup_success">手势密码设置成功</string>
    <string name="protected_setup">防盗设置</string>
    <string name="empty_cache">0 M</string>
    <string name="clean_complete">清理完成</string>
    <string name="start_use">立即使用</string>
    <string name="next_step">下一步</string>
    <string name="please_insert_sim">请插入SIM卡</string>
    <string name="please_input_phone_number">请输入安全手机号</string>
    <string name="please_input_correct_phone_number">请输入正确的手机号</string>
    <string name="complete_setup">完成设置</string>
    <string name="phone_protected">手机防盗</string>
    <string name="traffic_number_per_month">月流量套餐：%1$sM</string>
    <string name="fire_wall">防火墙</string>
    <string name="complete">完成</string>
    <string name="start_date">套餐开始日: %1$s号</string>
    <string name="app_download_url">http://www.wandoujia.com/apps/com.dong.mobilesafe</string>
    <string name="share_content_text">小白是专门为Android小白用户量身定做的手机优化APP.App首页摇一摇清理内存、流量随时监控、随时为任意APP上锁，保护你的隐私，更多功能请立刻下载体验吧，小白等着你哦。</string>
    <string name="app_logo_url">http://img.wdjimg.com/mms/icon/v1/7/80/0c0579ed77061d8af6f41055621c8807_256_256.png</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="toast_not_open_app">不能启动当前应用</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="harass_pattern">拦截模式</string>
    <string name="query">查询</string>
    <string name="app_manager">软件管理</string>
    <string name="input_gesture_tip">请输入手势密码</string>
    <string name="not_set_up">未设置</string>
    <string name="toast_kill_process_tip">"小白干掉了%1$s个进程，释放了%2$s的内存"</string>
    <string name="toast_home_kill_process_tip">小白为你释放了%1$s的内存</string>
    <string name="device_info">设备信息</string>
    <string name="copyright">© 2016 Jesse All Rights Reserved</string>
    <string name="xiaobai_copyright">廖计东版权个人所有</string>
    <string name="user_deal">用户协议</string>
    <string name="about">关于</string>
    <string name="contact">"联系人"</string>
    <string name="TxtYesterday">昨天 </string>
    <string name="tag_home_fragment">home_fragment</string>
    <string name="contact_information">联系方式</string>
    
    <string name="try_again">重试</string>
    <string name="goon">继续</string>
    <string name="confirm">确认</string>
    <string name="root_err_tip">打开此功能需要获取root权限, 请先Root手机，然后再重试</string>
    
     <string name="lockpattern_recording_incorrect_too_short" >"至少连接4个点，请重试"</string>
     <string name="lockpattern_error" >"手势密码不对"</string>
    
    <!-- Accessibility description sent when user starts drawing a lock pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <!-- Accessibility description sent when the pattern times out and is cleared. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <!-- Accessibility description sent when user adds a cell to the pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <!-- Accessibility description sent when user completes drawing a pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    

    <string name="dialog_title">Dialog setup:</string>
    <string name="footer">Footer</string>
    <string name="header">Header</string>
    <string name="header_title">Your title</string>
    <string name="header_sample">SAMPLE HEADER</string>
    <string name="footer_button_close">CLOSE</string>
    <string name="footer_button_confirm">CONFIRM</string>
    <string name="footer_sample">SAMPLE FOOTER</string>
    <string name="button_bottom">Bottom</string>
    <string name="button_center">Center</string>
    <string name="button_top">Top</string>
    <string name="google_plus_title">Google Plus</string>
    <string name="google_maps_title">Maps</string>
    <string name="google_messenger_title">Messenger</string>
    <string name="question">Do you like Dialog Plus?</string>
    <string name="button_like">I like it</string>
    <string name="button_love">I love it</string>
    <string name="view_holder">View Holder</string>
    <string name="list_holder">List Holder</string>
    <string name="grid_holder">Grid Holder</string>
    <string name="show_header">Show header</string>
    <string name="show_footer">Show footer</string>

</resources>
