<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

        
	   <com.dong.mobilesafe.ui.AnimRelativeLayout
	       android:id="@+id/top_content"
	       android:layout_width="match_parent"
	       android:background="@drawable/top_bg"
	       android:layout_weight="4"
	       android:layout_height="0dp">
	       
	       <TextView 
	           android:id="@+id/tv_garbage_count"
	           android:layout_width="match_parent"
	           android:layout_height="match_parent"
	           android:textSize="64sp"
	           android:gravity="center"
			   android:text="@string/empty_cache"
	           android:textColor="@android:color/white"/>

		   <ImageView
			   android:id="@+id/iv_scan"
			   android:layout_width="wrap_content"
			   android:layout_height="match_parent"
			   android:scaleType="centerCrop"
			   android:src="@drawable/scan"/>

		   <ImageView
			   android:id="@+id/iv_smile"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_centerInParent="true"
			   android:scaleType="centerCrop"
			   android:visibility="gone"
			   android:src="@drawable/smile"/>
	       
	   </com.dong.mobilesafe.ui.AnimRelativeLayout>


    <android.support.v7.widget.RecyclerView
        android:layout_weight="5"
        android:id="@+id/scan_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
		android:scrollbars="none"
        android:orientation="vertical"/>

	<com.dd.CircularProgressButton
		android:id="@+id/btn_clear_cache"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:textColor="@color/white"
		android:textSize="18sp"
		android:visibility="gone"
		app:cpb_selectorIdle="@drawable/idle_state_selector"
		app:cpb_colorIndicator="@color/cpb_blue"
		app:cpb_colorIndicatorBackground="@color/cpb_grey"
		app:cpb_colorProgress="@color/cpb_white"
		app:cpb_textComplete="@string/clean_complete"
		app:cpb_textIdle="@string/clean_all" />


</LinearLayout>